--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,7 @@ bootRun {
 assets {
     minifyJs  = true
     minifyCss = true
+    includes = ["fonts/*"]
 }
 
 task copyDistToHerokuUp(type: Copy) {
